--- a/sass/_controlbox.scss
+++ b/sass/_controlbox.scss
@@ -491,7 +491,7 @@
             }
             @media screen and (max-width: $mobile-portrait-length) {
                 .brand-heading {
-                    font-size: 400%;
+                    font-size: 300%;
                 }
             }
         }
